[package]
name = "klarfrs"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "klarfrs"
crate-type = ["cdylib", "rlib"]
path ="src/lib.rs"

[dependencies]
pyo3 = { version = "0.22.2", features = ["extension-module", "auto-initialize"] }
regex = "1.10.6"

[build-dependencies]
pyo3-build-config = "0.22.2"

[dev-dependencies]
tempfile = "3.2"

